--- a/Es 2.html
+++ b/Es 2.html
@@ -6,15 +6,6 @@
     <title>Esercizio 2</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script>
-        function onSubmit() {
-            if (true) {
-                var inputNome = document.getElementById("name").value;
-                var inputCognome =document.getElementById("surname").value;
-            }
-            console.log("ciao " + inputNome + " " + inputCognome)
-        }
-    </script>
     <style>
         h1 {
             text-align: center;
@@ -27,10 +18,19 @@
     <h1>Compila il modulo!</h1>
     <label>Inserisci il tuo nome:</label>
     <input type="text" id="name" placeholder="Inserisci nome" />
-    <br/> <br/>
+    <br /> <br />
     <label>Inserisci il tuo cognome:</label>
     <input type="text" id="surname" placeholder="Inserisci cognome" />
     <button onclick="onSubmit()">Invio</button>
+
+    <script>
+        function onSubmit() {
+            var inputNome = document.getElementById("name").value;
+            var inputCognome = document.getElementById("surname").value;
+            console.log("ciao " + inputNome + " " + inputCognome);
+            document.write("ciao " + inputNome + " " + inputCognome)
+        }
+    </script>
 </body>
 
 </html>
